# bevy-vm

./: .gitignore  CLAUDE.MD  Cargo.toml
docs/: design.md  migration_single_world.md  todo.md
docs/proposal/: bevy_bridge_macro.md  query_filters.md  reflect_serialization.md  rune_migration.md  script_hot_path_perf.md  ui_sync_incremental.md
examples/: drag.rs  inspect.rs  viewer.rs
examples/assets/models/: chest.glb  rock.glb  tree.glb
examples/worlds/: bounce.rhai  gallery.ron  orbit.ron  primitives.ron  spin.rhai
examples/worlds/alien_cake_addict/: board.rhai  board.ron  bonus.rhai  bonus.ron  camera.rhai  consts.rhai  hud.rhai  hud.ron  player.rhai  player.ron  source.rs  world.ron
examples/worlds/counter_sphere/: bullet.rhai  bullet.ron  camera.rhai  camera.ron  combat.rhai  combat.ron  crosshair.rhai  crosshair.ron  cursor.rhai  cursor.ron  enemy.ron  enemy_move.rhai  enemy_spawn.rhai  gun.ron  gun_follow.rhai  gun_spawn.rhai  helpers.rhai  hud.rhai  hud.ron  player.rhai  player.ron  restart_world.rhai  setup.rhai  shoot.rhai  shoot.ron  terrain.rhai  terrain.ron  win.rhai  win.ron  win_restart.rhai  (+1 more)
src/: component.rs  config.rs  error.rs  event.rs  lib.rs  plugin.rs  plugin_loader.rs  random.rs  render.rs  resource.rs  system.rs  vm.rs  world_access.rs  world_module.rs
src/component/: camera.rs  dynamic.rs  mesh.rs  picking.rs  scene.rs  sprite.rs  tests.rs  text.rs  typed.rs
src/plugin/: cursor.rs  input.rs  picking.rs
src/resource/: build.rs  config.rs  image.rs  material.rs  mesh.rs
src/system/: script.rs
src/vm/: id.rs  instance.rs  plugin.rs
src/world_access/: path.rs
tests/: alien_cake_addict.rs  config_formats.rs  config_loading.rs  const_fold_spike.rs  counter_sphere.rs  drag_flow.rs  events.rs  flappy_bird.rs  geometry_bros.rs  hierarchy.rs  input_events.rs  minesweeper.rs  orbit_smoke.rs  plugins.rs  reflect_spike.rs  robbo.rs  script.rs  tetris.rs  tick.rs  time.rs  ui_bridge.rs
tests/worlds/: bad_syntax.rhai  bad_syntax.ron  combat.ron  combat_state.rhai  damage.rhai  damage.ron  drain_health.rhai  infinite_loop.rhai  input_counter.rhai  input_counter.ron  inventory.rhai  inventory.ron  movement.ron  runaway.ron
tools/: Cargo.toml
(+127 files in other folders)
